src/test/ui/borrowck/borrowck-lend-flow.nll.stderr
error[E0502]: cannot borrow `*v` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-lend-flow.rs:34:16
   |
LL |     let _w = &v;
   |              -- immutable borrow occurs here
LL |     borrow_mut(&mut *v); //~ ERROR cannot borrow
   |                ^^^^^^^ mutable borrow occurs here
LL |     _w.use_ref();
   |     -- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
